added ex19 folder, exercise in progress

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 *
-!README.md
 !.gitignore
-!Makefile
 !appendix/
 !exercises/
-!appendix/*.md
-!appendix/*.c
-!exercises/*.md
-!exercises/*.c
+!exercises/ex19/
+!Makefile
+!*.md
+!*.c
+!*.h
